<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">register</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_label_signup">注 册</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    <string name="login_login_link">已有帐号？ <a href="#">登录</a></string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
