<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">
    <!-- padding 内边距   layout_margin 外边距
            android:layout_alignParentTop 布局的位置是否处于顶部 -->
    <RelativeLayout
        android:id="@+id/register_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        >
        <!-- 账号 -->
        <TextView
            android:id="@+id/register_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username"
            style="@style/normalText"/>
        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:singleLine="true"
            android:inputType="text"
            android:layout_below="@+id/register_user_input"
            android:layout_alignParentLeft="true" />
        <!-- 密码 text -->
        <TextView
            android:id="@+id/register_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password"
            style="@style/normalText"/>
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_input"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"
            />


        <!-- 登录button -->
        <Button
            android:id="@+id/signup_button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit"
            android:layout_alignRight="@id/password_edit"
            android:text="@string/login_label_signup"
            android:background="@drawable/blue_button"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView  android:id="@+id/login_link"
            android:text="@string/login_login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="#888"
            />
        <TextView  android:id="@+id/login"
            android:text="登录"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_link"
            android:textColor="#FF0066CC"
            />
        <ImageView android:id="@+id/miniTwitter_logo"
            android:src="@drawable/cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="25dp"
            />

    </RelativeLayout>

</LinearLayout>
